--- a/game_backend/pyproject.toml
+++ b/game_backend/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.7"
 flask = "^1.1.2"
+dataclasses_jsonschema = "^2.12.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
