--- a/game_backend/pyproject.toml
+++ b/game_backend/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Your Name <you@example.com>"]
 python = "^3.7"
 flask = "^1.1.2"
 dataclasses_jsonschema = "^2.12.0"
+numpy = "^1.19.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
