added ipdb as dev dependency

--- a/game_backend/pyproject.toml
+++ b/game_backend/pyproject.toml
@@ -12,6 +12,7 @@ numpy = "^1.19.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+ipdb = "^0.13.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
